--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Windmill",
-  "name": "Windmill Dashboard React",
+  "short_name": "Wavesswap",
+  "name": "WavesSwap Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
