--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "windmill-dashboard-react",
-  "version": "0.4.0",
-  "description": "A multi theme, completely accessible, with components and pages examples, (almost) ready for production dashboard.",
+  "name": "wavesswap-dashboard",
+  "version": "1.0.0",
+  "description": "WavesSwap - An Evolution over Waves",
   "private": true,
   "scripts": {
     "tailwind:dev": "tailwindcss build src/assets/css/tailwind.css -o src/assets/css/tailwind.output.css",
@@ -25,11 +25,14 @@
     "faker": "4.1.0",
     "react": "^16.13.1",
     "react-chartjs-2": "2.9.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-focus-lock": "2.4.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "react-transition-group": "4.4.1"
+    "react-transition-group": "4.4.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "1.1.4",
@@ -45,7 +48,7 @@
     "tailwindcss": "1.4.6"
   },
   "keywords": [
-    "windmill",
+    "waves",
     "dashboard",
     "admin",
     "tailwind",
