Connect WavesExchange Home/MyWallet

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
+    "@waves.exchange/provider-web": "0.0.2",
+    "@waves/signer": "0.0.3",
     "@windmill/react-ui": "0.3.1",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
