--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client-install": "npm install --prefix client",
     "client-build": "npm run build --prefix client",
-    "build": "cd client && npm install && npm run build",
+    "build": "npm run client-install && npm run client-build",
     "start": "node server.js",
     "server": "node server.js",
     "client": "npm start --prefix client",
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "is-empty": "^1.2.0",
