--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "@waves/signer": "0.0.3",
     "@windmill/react-ui": "0.3.1",
     "autoprefixer": "9.8.0",
+    "axios": "^0.19.2",
+    "btfcswap-dashboard": "file:..",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
     "cross-env": "7.0.2",
