--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "classnames": "2.2.6",
     "cross-env": "7.0.2",
     "faker": "4.1.0",
+    "multicoin-address-validator": "^0.4.16",
     "postcss-cli": "7.1.1",
     "react": "^16.13.1",
     "react-chartjs-2": "2.9.0",
